@@ -1,3 +1,9 @@
+2017-04-18  Jeff Law  <law@redhat.com>
+
+	PR target/74563
+	* mips.md ({return,simple_return}_internal): Do not overwrite
+	operands[0].
+
 2017-04-18  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/80443
